Small typo correction

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <li>Most of the functionality of the official Gallery application.</li>
             </ul>
 
-            <h2>Funtionality through screenshots:</h2>
+            <h2>Functionality through screenshots:</h2>
 
             <div class="row">
               <ul class="thumbnails">
