Added video and installing link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
             untagging pictures with confirmed contacts on the face
             areas.</p>
 
+            <h2>Installing:</h2>
+
+            <p>The easiet way of installing <em>Look Alike</em> is
+            through its entry in
+            the <a href="http://store.ovi.com/content/327099">Nokia
+            Store</a>.</p>
+
             <h2>Features:</h2>
 
             <ul>
@@ -146,14 +153,14 @@
               </ul>
             </div>
 
-            <!-- h2>Video explanation:</h2>
+            <h2>Video explanation:</h2>
 
-            <video id="my_video_1" class="video-js vjs-default-skin" controls
-                   preload="auto" width="640" height="264" poster="http://video-js.zencoder.com/oceans-clip.jpg"
-                   data-setup="{}">
-              <source src="http://video-js.zencoder.com/oceans-clip.mp4" type='video/mp4'>
-                <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm'>
-            </video -->
+            <p align="center">
+              <iframe width="640" height="360"
+                      src="https://www.youtube-nocookie.com/embed/wauAsm-NO2Q"
+                      frameborder="0" allowfullscreen>
+              </iframe>
+            </p>
 
             <h2>Get support:</h2>
 
